fixed vertial alignment issues found in Percy

--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -37,6 +37,8 @@
   }
 
   &__details {
+    padding-bottom: 1rem;
+    padding-top: 1rem;
     position: relative;
     z-index: 5;
   }
